fixed tiny spacing thing

--- a/website_test/Style.css
+++ b/website_test/Style.css
@@ -56,7 +56,7 @@ p {
     display: none;
     z-index: 2;
     position: absolute;
-    margin-left: 40%; /*layer exactly on top of grid*/
+    margin-left: 40%;
     height: 510px; 
     width: 310px;
 }
@@ -120,7 +120,7 @@ p {
 #inventoryContainer { 
     display: grid;
     margin-left: 25px;
-    width: 300px;
+    width: 330px;
     height: 500px;
 }
 #invMode1 {
